--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -74,5 +74,12 @@
 }
 .head{
     margin-top: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
+}
+.side-menu{
+    background: white;
+    height: 100%;
+    padding: 25px;
+    border: 1px solid rgb(211, 208, 208);
+    border-radius: 3px;
 }
